--- a/sections/projects/styles.css
+++ b/sections/projects/styles.css
@@ -11,7 +11,11 @@
 
 /* ===== Scroller ===== */
 .scroller {
+  flex: 1;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .scroller[data-animated="true"] {
@@ -54,6 +58,7 @@
 
 /* ===== Scroller Inner ===== */
 .scroller__inner {
+  height: 100%;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
@@ -64,7 +69,7 @@
 /* ===== Individual Card ===== */
 .scroller__card {
   position: relative;
-  height: 30vh;
+  height: 100%;
   aspect-ratio: 1 / 1;
   overflow: hidden;
   transition: filter 0.3s ease;
@@ -141,7 +146,6 @@
 }
 
 .section-introduction .description {
-  max-width: 70%;
   text-align: justify;
   margin-bottom: 2vh;
   font-weight: 100;
@@ -164,8 +168,6 @@
   z-index: 10;
 
   border-left: 3px solid rgb(var(--text-2));
-  mask: linear-gradient(0deg, transparent 0%, white 2%, white 98%, transparent);
-  -webkit-mask: linear-gradient(0deg, transparent 0%, white 2%, white 98%,transparent);
   opacity: 0.9;
 }
 
@@ -181,20 +183,19 @@
     -webkit-mask: linear-gradient(0deg, transparent, white 15%);
     mask: linear-gradient(0deg, transparent, white 15%);
   }
-  .scroller {
-    flex: 1;
-  }
-  .scroller__card {
-    height: 24.5vh;
-  }
   .scroller__card>a { font-size: 0.9rem; }
   .scroller-overlay {
+    flex: 1;
     position: relative;
-    flex-direction: column;
     width: 100%;
-    height: 25vh;
-    border: none;
     opacity: 1;
+    border: none;
+  }
+  .section-introduction {
+    padding: 0 2rem;
+  }
+  .section-introduction .description {
+    max-width: 70%;
   }
 }
 
@@ -205,7 +206,6 @@
 @media (max-width: 768px) {
   .scroller__card { height: 25vh; };
   .scroller__card>a { font-size: 0.8rem; }
-  .section-introduction { padding: 0 2rem; }
   .section-introduction .title { font-size: 1.5rem; }
   .section-introduction .description { font-size: 1rem; }
 }
